--- a/app.yaml
+++ b/app.yaml
@@ -1,16 +1,6 @@
 kind: wasmer.io/App.v0
 name: ntust-healthmap
-package: php/php@8.3.1
-description: NTUST Health Task Map - 台科大健康任務地圖
-debug: true
-
-source: .
-
-cli_args:
-  - -S
-  - 0.0.0.0:8080
-  - -t
-  - /src
+package: .
 
 env:
   # PHP settings
